# zap

./: .replit  README.md  SIMPLE_SETUP.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md  app.py  auth_manager.py  create_database.py  fix_for_local.md  local_config.py  local_debug.py  main.py  models.py  pyproject.toml  replit.md  report_generator.py  run_local.py  run_windows.py  scanner.py  setup_database.py  setup_local.py  setup_local_postgres.py  simple_run.py  test_download.py  test_postgres_connection.py  vulnerability_detector.py  zap_manager.py  zap_scanner.db
attached_assets/: Pasted-C-Users-anirb-IdeaProjects-untitled-venv-Scripts-python-exe-C-Users-anirb-Downloads-zap-11-zap-1754004536907_1754004536908.txt  Pasted-C-Users-anirb-IdeaProjects-untitled-venv-Scripts-python-exe-C-Users-anirb-Downloads-zap-17-zap-1754029298378_1754029298378.txt  Pasted-C-Users-anirb-IdeaProjects-untitled-venv-Scripts-python-exe-C-Users-anirb-Downloads-zap-2-zap--1754035114384_1754035114385.txt  Pasted-C-Users-anirb-IdeaProjects-untitled-venv-Scripts-python-exe-C-Users-anirb-Downloads-zap-4-zap--1754035820224_1754035820225.txt  Pasted-Microsoft-Windows-Version-10-0-26100-4770-c-Microsoft-Corporation-All-rights-reserved-C-U-1754035131959_1754035131960.txt
instance/: zap_scanner.db
static/css/: custom.css
static/js/: scanner.js
templates/: base.html  index.html  scan_history.html  scan_results.html
